# product-connections-manager-platform

./: .gitignore  CHANGELOG.md  DEPLOYMENT_SUCCESS.md  GITHUB_ACTIONS_SETUP.md  LICENSE  MANIFEST.in  PACKAGE_INFO.md  PYPI_UPLOAD_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
modules/edr-printer/: README.md  automated_edr_printer.py  enhanced_edr_printer.py  requirements.txt
product_connections_manager/: __init__.py
product_connections_manager/edr_printer/: __init__.py  automated_edr_printer.py  edr_report_generator.py  enhanced_edr_printer.py
tests/: README.md  conftest.py  test_enhanced_edr_printer.py
