[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "product-connections-manager"
dynamic = ["version"]
description = "A comprehensive platform for managing Product Connections operations with automated EDR printing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CyberISeeYou", email = "cyberiseeyou@gmail.com"},
]
maintainers = [
    {name = "CyberISeeYou", email = "cyberiseeyou@gmail.com"},
]
keywords = [
    "walmart", "retail-link", "edr", "event-detail-report", 
    "automation", "printing", "pdf", "business", "workflow"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "Topic :: Printing",
    "Topic :: Office/Business :: Scheduling",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
]
dependencies = [
    "requests>=2.28.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
pdf = [
    "reportlab>=4.0.0",
    "weasyprint>=61.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
]

[project.scripts]
edr-printer = "product_connections_manager.edr_printer.enhanced_edr_printer:main"
edr-automated = "product_connections_manager.edr_printer.automated_edr_printer:main"

[project.urls]
Homepage = "https://github.com/cyberiseeyou/product-connections-manager-platform"
Documentation = "https://github.com/cyberiseeyou/product-connections-manager-platform/blob/main/README.md"
Repository = "https://github.com/cyberiseeyou/product-connections-manager-platform"
"Bug Tracker" = "https://github.com/cyberiseeyou/product-connections-manager-platform/issues"

[tool.setuptools]
packages = ["product_connections_manager", "product_connections_manager.edr_printer"]

[tool.setuptools.dynamic]
version = {attr = "product_connections_manager.__version__"}

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings --verbose"

[tool.coverage.run]
source = ["product_connections_manager"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
